--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -18,7 +18,7 @@
   <ion-item *ngFor="let entry of form">
     <ion-label>{{entry.val}}</ion-label>
     <ion-checkbox slot="start" [(ngModel)]="entry.isChecked"></ion-checkbox>
-    <ion-input required type="text" oninput="handleFirstNameValue(event)"></ion-input>
+    <ion-input required type="text"></ion-input>
   </ion-item>
 
   <ion-button (click)="Addtask()"> + Add Task </ion-button>
