--- a/src/app/add-tasks/add-tasks.page.html
+++ b/src/app/add-tasks/add-tasks.page.html
@@ -1,9 +1,19 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>addTasks</ion-title>
+    <ion-title> Placeholder </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-button [routerLink]="['/tabs']">blogPost</ion-button>
+ <ion-toolbar> <ion-buttons routerLink = "/tabs" slot="start"> <ion-back-button defaultHref="home"></ion-back-button> </ion-buttons> </ion-toolbar> 
+ <h1 id="Headers"> <u> Add Task </u> </h1>
+<div id="Desc"> 
+  <ion-textarea id="Tdesc" placeholder="Enter more information here..."></ion-textarea>
+</div>
+
+<ion-item>
+  <ion-label>Plain</ion-label>
+  <ion-datetime monthValues="6,7,8" yearValues="2014,2015" dayValues="01,02,03,04,05,06,08,09,10, 11, 12, 13, 14" displayFormat="DD/MMM/YYYY"></ion-datetime>
+</ion-item>
+
 </ion-content>
