--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -15,5 +15,16 @@
   .fixed[scrolly=true] {
     overflow-y: auto;
   }
+  .Headers {
+    text-align: center; 
+  }
+  #btn {
+    width: 300px; 
+    height: 45px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 30px;
+    font-weight: 300 
+  }
 
   
