--- a/src/app/add-tasks/add-tasks.page.html
+++ b/src/app/add-tasks/add-tasks.page.html
@@ -8,12 +8,12 @@
  <ion-toolbar> <ion-buttons routerLink = "/tabs" slot="start"> <ion-back-button defaultHref="home"></ion-back-button> </ion-buttons> </ion-toolbar> 
  <h1 id="Headers"> <u> Add Task </u> </h1>
 <div id="Desc"> 
-  <ion-textarea id="Tdesc" placeholder="Enter more information here..."></ion-textarea>
+  <ion-textarea id="Tdesc" placeholder="Description"></ion-textarea>
 </div>
 
 <ion-item>
-  <ion-label>Plain</ion-label>
-  <ion-datetime monthValues="6,7,8" yearValues="2014,2015" dayValues="01,02,03,04,05,06,08,09,10, 11, 12, 13, 14" displayFormat="DD/MMM/YYYY"></ion-datetime>
+  <ion-label >Due Date</ion-label>
+  <ion-datetime displayFormat="DDD, MMM, D, h:mm, A" ></ion-datetime>
 </ion-item>
 
 </ion-content>
