I have styled it to look like the wirefram and am attempting pop-overs

--- a/src/app/add-tasks/add-tasks.page.html
+++ b/src/app/add-tasks/add-tasks.page.html
@@ -13,7 +13,8 @@
 
 <ion-item>
   <ion-label >Due Date</ion-label>
-  <ion-datetime displayFormat="DDD, MMM, D, h:mm, A" ></ion-datetime>
+  <ion-datetime pickerFormat="DDD, MMM, D, h:mm, A" displayFormat="DDD, MMM D, h:mm, A" placeholder="Month, Date, Time"></ion-datetime>
 </ion-item>
-
+<br>
+<ion-button id="btn" color="medium"> <h1 id="btntext">SAVE</h1> </ion-button>
 </ion-content>
