I am attempting Popover once again and am following a vid by Simon Grimm, hopefully everything goes as planned

--- a/src/app/add-tasks/add-tasks.page.html
+++ b/src/app/add-tasks/add-tasks.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title> Placeholder </ion-title>
+    <ion-title>  </ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> 
 
 <ion-content>
  <ion-toolbar> <ion-buttons routerLink = "/tabs" slot="start"> <ion-back-button defaultHref="home"></ion-back-button> </ion-buttons> </ion-toolbar> 
@@ -16,5 +16,6 @@
   <ion-datetime pickerFormat="DDD, MMM, D, h:mm, A" displayFormat="DDD, MMM D, h:mm, A" placeholder="Month, Date, Time"></ion-datetime>
 </ion-item>
 <br>
-<ion-button id="btn" color="medium"> <h1 id="btntext">SAVE</h1> </ion-button>
+<ion-button id="btn" color="tertiary"> <h1 id="btntext">SAVE</h1> </ion-button>
+<ion-button> popover  </ion-button>
 </ion-content>
