--- a/src/app/popovercomponent/popovercomponent.page.html
+++ b/src/app/popovercomponent/popovercomponent.page.html
@@ -1,4 +1,4 @@
-<!--<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>popovercomponent</ion-title>
   </ion-toolbar>
@@ -7,7 +7,7 @@
 <ion-content>
 <ion-grid>
   <ion-row> <ion-col> Your task has now been added to the list. </ion-col> </ion-row>
-  <ion-row> <ion-col></ion-col> <ion-button color="medium"> Done </ion-button>> </ion-row>
+  <ion-row> <ion-col></ion-col> <ion-button color="medium" (click)="ClosePopover()"> Done </ion-button>> </ion-row>
 </ion-grid>
 
 </ion-content>
