--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,7 +10,7 @@
 (ionScroll)="logScrolling($event)"
 (ionScrollEnd)="logScrollEnd()">
 
-<ion-button [routerLink]="['/app-add-tasks']" routerDirection="forward" id="btn" expand="block">Add Task </ion-button>
+<ion-button [routerLink]="['/app-add-tasks']" routerDirection="forward" id="btn" color="tertiary" expand="block">Add Task </ion-button>
 
 <!-- Checkboxes in a List -->
 <div class="fixed">
