I am getting closer but I ran into a problem where HTMLIonPopoverElement is replacing popoverElement is preventing it from working

--- a/src/app/add-tasks/add-tasks.page.html
+++ b/src/app/add-tasks/add-tasks.page.html
@@ -17,5 +17,5 @@
 </ion-item>
 <br>
 <ion-button id="btn" color="tertiary"> <h1 id="btntext">SAVE</h1> </ion-button>
-<ion-button> popover  </ion-button>
+<ion-button (click)="CreatePopover()">Popover</ion-button>
 </ion-content>
