--- a/src/app/popovercomponent/popovercomponent.page.html
+++ b/src/app/popovercomponent/popovercomponent.page.html
@@ -1,13 +1,12 @@
-<!-- <ion-header>
+<!--<ion-header>
   <ion-toolbar>
     <ion-title>popovercomponent</ion-title>
   </ion-toolbar>
 </ion-header> -->
 
-<ion-content>
-<ion-grid>
-  <ion-row> <ion-col> Your task has now been added to the list. </ion-col> </ion-row>
-  <ion-row> <ion-col></ion-col> <ion-button color="medium" (click)="ClosePopover()"> Done </ion-button>> </ion-row>
-</ion-grid>
-
-</ion-content>
+<ion-content padding>
+    <ion-grid>
+      <ion-row><ion-col>This is an ionic popover example.</ion-col></ion-row>
+      <ion-row><ion-col><ion-button color="tertiary" expand="block" (click)="ClosePopover()">Ok</ion-button></ion-col></ion-row>
+    </ion-grid> 
+  </ion-content>
