Trying to use Service for app

--- a/src/app/add-tasks/add-tasks.page.html
+++ b/src/app/add-tasks/add-tasks.page.html
@@ -2,8 +2,9 @@
 <ion-content>
  <ion-toolbar id="tbbg"> <ion-buttons routerLink = "/tabs" slot="start"> <ion-back-button defaultHref="home"></ion-back-button> </ion-buttons> </ion-toolbar> 
  <h1 id="Headers"> <u> Add Task </u> </h1>
+ <form (ngSubmit)="CreatePopover()">
 <div id="Desc"> 
-  <ion-textarea id="Tdesc" placeholder="Description"></ion-textarea>
+  <ion-input [(ngModel)]='input' name="1234" id="Tdesc" placeholder="Description"></ion-input>
 </div>
 
 <ion-item>
@@ -11,5 +12,7 @@
   <ion-datetime pickerFormat="DDD, MMM, D, h:mm, A" displayFormat="DDD, MMM D, h:mm, A" placeholder="Month, Date, Time"></ion-datetime>
 </ion-item>
 <br>
-<ion-button id="btn" color="tertiary" (click)="CreatePopover()"> <h1 id="btntext">SAVE</h1> </ion-button>
+
+<ion-button id="btn" type="submit" color="tertiary"> <h1 id="btntext">SAVE</h1> </ion-button>
+</form>
 </ion-content>
