--- a/src/app/popover/popover.component.html
+++ b/src/app/popover/popover.component.html
@@ -1,7 +1,8 @@
 
+
 <ion-content padding>
     <ion-grid>
       <ion-row><ion-col> Your task has been added to your list. </ion-col></ion-row>
-      <ion-row><ion-col><ion-button color="tertiary" expand="block" (click)="ClosePopover()">Ok</ion-button></ion-col></ion-row>
+      <ion-row><ion-col><ion-button routerLink="/tabs" routerDirection="back" color="tertiary" expand="block" (click)="ClosePopover()">Ok</ion-button></ion-col></ion-row>
     </ion-grid> 
 </ion-content>
