--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -19,9 +19,9 @@
     
   <ion-item *ngFor="let entry of form">
     <ion-label>{{entry.val}}</ion-label>
-    <ion-checkbox slot="start" [(ngModel)]="entry.isChecked"></ion-checkbox>
-    <ion-input required type="text"></ion-input>
-  </ion-item>
+    <ion-checkbox  slot="start" [(ngModel)]="entry.isChecked"> {{input3.input4}} </ion-checkbox>
+    <ion-input id="add" [{ngModel}]="suceess" required type="text"></ion-input>
+  </ion-item> 
 
 </ion-list>
 </div>
