--- a/src/app/add-tasks/add-tasks.page.html
+++ b/src/app/add-tasks/add-tasks.page.html
@@ -12,7 +12,7 @@
   <ion-datetime pickerFormat="DDD, MMM, D, h:mm, A" displayFormat="DDD, MMM D, h:mm, A" placeholder="Month, Date, Time"></ion-datetime>
 </ion-item>
 <br>
-
+<ion-label color="secondary" stacked>Type Description</ion-label>
 <ion-button id="btn" type="submit" color="tertiary"> <h1 id="btntext">SAVE</h1> </ion-button>
 </form>
 </ion-content>
