--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,10 +1,10 @@
 <!-- <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      
+      <ion-img height="40 px" width="30 px" src="../assets/Note&SlashLogo.png" id="logo"></ion-img>
     </ion-title>
   </ion-toolbar>
-</ion-header> --> 
+</ion-header>  -->
 
 <ion-content  [scrollEvents]="true" (ionScrollStart)="logScrollStart()"
 (ionScroll)="logScrolling($event)"
