--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -25,7 +25,12 @@
     margin-right: auto;
     font-size: 30px;
     color: #501CBE;
-    font-weight: 300 
+    font-weight: 300;  
+    #logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    }
   }
   ion-content {
     --ion-background-color:#ECEFFF;
