trying to prepare for testflight

--- a/src/app/add-tasks/add-tasks.page.scss
+++ b/src/app/add-tasks/add-tasks.page.scss
@@ -9,9 +9,13 @@
     left: 22px;
     background: #ffffff;
 }
+#textarea{
+    height:400px;
+}
 #Tdesc {
-    position: absolute;
-     left: 8px;
+    position: relative;
+    left: 8px;
+    height:400px;
 }
 #Headers {
     text-align: center; 
