--- a/src/app/add-tasks/add-tasks.page.html
+++ b/src/app/add-tasks/add-tasks.page.html
@@ -1,18 +1,19 @@
 
 <ion-content>
  <ion-toolbar id="tbbg"> <ion-buttons routerLink = "/tabs" slot="start"> <ion-back-button defaultHref="home"></ion-back-button> </ion-buttons> </ion-toolbar> 
- <h1 id="Headers"> <u> Add Task </u> </h1>
+ <h1 id="Headers" style="color: black;"> <u> Add Task </u> </h1>
  <form (ngSubmit)="CreatePopover()">
-<div id="Desc"> 
-  <ion-input [(ngModel)]='input' name="1234" id="Tdesc" placeholder="Description"></ion-input>
-</div>
+  <ion-item id="textarea">
+    <ion-textarea [(ngModel)]='input' name="1234" id="Tdesc" placeholder="Description" rows = "20"></ion-textarea>
+  </ion-item>
+
 
 <ion-item>
   <ion-label >Due Date</ion-label>
   <ion-datetime pickerFormat="DDD, MMM, D, h:mm, A" displayFormat="DDD, MMM D, h:mm, A" placeholder="Month, Date, Time"></ion-datetime>
 </ion-item>
 <br>
-<ion-label color="secondary" stacked>Type Description</ion-label>
+<!-- <ion-label color="secondary" stacked>Type Description</ion-label> -->
 <ion-button id="btn" type="submit" color="tertiary"> <h1 id="btntext">SAVE</h1> </ion-button>
 </form>
 </ion-content>
